// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c0::after {
  border: 5px solid transparent;
  border-bottom-width: 0;
  border-top-color: #3273dc;
  content: '';
  display: block;
  pointer-events: none;
  position: relative;
  position: absolute !important;
  right: 0.8125em;
  top: calc(50% - 2.5px);
  z-index: 4;
}

.c0:hover::after {
  border-top-color: #363636;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #dbdbdb;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #b5b5b5;
}

.c1:focus,
.c1:active {
  border-color: #3273dc;
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
  />
</div>
`;

exports[`should render correctly when disabled 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #dbdbdb;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #b5b5b5;
}

.c1:focus,
.c1:active {
  border-color: #3273dc;
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
    disabled=""
  />
</div>
`;

exports[`should render correctly when disabled and multiple 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #dbdbdb;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #b5b5b5;
}

.c1:focus,
.c1:active {
  border-color: #3273dc;
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
    disabled=""
    multiple=""
  />
</div>
`;

exports[`should render the danger variant correctly 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c0::after {
  border: 5px solid transparent;
  border-bottom-width: 0;
  border-top-color: #ff3860;
  content: '';
  display: block;
  pointer-events: none;
  position: relative;
  position: absolute !important;
  right: 0.8125em;
  top: calc(50% - 2.5px);
  z-index: 4;
}

.c0:hover::after {
  border-top-color: #363636;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #ff3860;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #ff2b56;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
  />
</div>
`;

exports[`should render the danger variant correctly when disabled 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #ff3860;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #ff2b56;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
    disabled=""
  />
</div>
`;

exports[`should render the danger variant correctly when multiple 1`] = `
.c0 {
  max-width: 100%;
  position: relative;
  vertical-align: top;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding: calc(0.375em - 1px) calc(0.625em - 1px);
  position: relative;
  vertical-align: top;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
  color: #363636;
  cursor: pointer;
  display: block;
  font-size: 1em;
  max-width: 100%;
  outline: none;
  padding-right: 2.25em;
  width: 100%;
  border-color: #ff3860;
}

.c1:focus,
.c1:active {
  outline: none;
}

.c1[disabled],
fieldset[disabled] .c1 {
  cursor: not-allowed;
}

.c1:hover {
  border-color: #ff2b56;
}

.c1:focus,
.c1:active {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #363636;
}

.c1::-ms-expand {
  display: none;
}

.c1[multiple] {
  height: auto;
  padding: 0;
}

.c1[disabled],
fieldset[disabled] .c1 {
  background-color: #f5f5f5;
  border-color: #f5f5f5;
  box-shadow: none;
  color: #7a7a7a;
}

<div
  class="c0"
>
  <select
    autocomplete="off"
    class="c1"
    multiple=""
  />
</div>
`;
